# opinionated-django

./: Procfile  mix-manifest.json  package.json  pyproject.toml  webpack.mix.js
opinionated_django/: manage.py
opinionated_django/css/: app.css
opinionated_django/opinionated_django/: asgi.py  celery.py  custom_storage.py  settings.py  urls.py  wsgi.py
opinionated_django/static/: app.js
